--- a/report.html
+++ b/report.html
@@ -1625,22 +1625,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,13420],[],[[4,0,0,[],[1,284,13134],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,6321],[],[[4,0,0,[],[1,361,5957],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Selenium Test","*C:\\Users\\saravananbabhujs\\Desktop\\TestingRobot\\Selenium Suite\\Selenium_Test.robot","*Selenium%20Suite/Selenium_Test.robot","*TC4 Testing"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Multiple","*C:\\Users\\saravananbabhujs\\Desktop\\TestingRobot\\Selenium Suite\\Multiple.robot","*Selenium%20Suite/Multiple.robot","*TC1"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:13","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"Selenium Test","name":"Selenium Test","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"Multiple","name":"Multiple","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1625638699850;
+window.output["baseMillis"] = 1625723389694;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 13438;
+window.output["generated"] = 6336;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
